Directive values must be an array of strings
No httpadditions
No proc support
No auto adding of data: