@@ -1,4 +1,8 @@
 Directive values must be an array of strings
+Old self/none/inline/eval not supported (will raise exceptions if validated)
 No httpadditions
-No proc support
+No proc support, at all
+No CSP tagging, you can do it yourself
+No hash config support (except csp|hpkp)
 No auto adding of data:
+No support for mixed content (e.g. CSP strips all schemes)
